# smbios-parser

./: CMakeLists.txt  README.md  sample.cc  smbios.c  smbios.cc  smbios.h  smbios.hh  smbios_decode.c  smbios_decode.cc
.github/workflows/: ccpp.yml  linux.yml  windows.yml
include/dmi/: parser.hh
source/: parser.cc
